css/styles.css
/* ... */
.parallax > use:nth-child(1) {
	animation-delay: -2s;
	animation-duration: 7s;
}
.parallax > use:nth-child(2) {
	animation-delay: -3s;
	animation-duration: 10s;
}
.parallax > use:nth-child(3) {
	animation-delay: -4s;
	animation-duration: 13s;
}
.parallax > use:nth-child(4) {
	animation-delay: -5s;
	animation-duration: 20s;
}
@keyframes move-forever {
	0% {
	transform: translate3d(-90px,0,0);
	}
	100% { 
	transform: translate3d(85px,0,0);
	}
}

#cards {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
    grid-gap: 20px;
    max-width: 90vw;
    width: calc(100% - 40px);
    margin: 20px;
    padding: 20px;
}

#cards:hover > .card::after {
	opacity: 1;
}

.card {
    background-color: rgba(255, 255, 255, 0.1);
    border-radius: 15px;
    cursor: pointer;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    position: relative;
    transition: transform 0.5s ease-in-out;
    width: 100%;
    max-width: 300px;
    height: 300px;
    padding: 20px;
    box-sizing: border-box;
}

.card:focus {
    outline: 2px solid transparent;
}

.card:hover::before {
	opacity: 1;
}

.card::before,
.card::after {
	border-radius: 15px;
	content: "";
	height: 100%;
	left: 0px;
	opacity: 0;
	position: absolute;
	top: 0px;
	transition: opacity 500ms;
	width: 100%;
}

.card::before {
	background: radial-gradient(
		800px circle at var(--mouse-x) var(--mouse-y), 
		rgba(255, 255, 255, 0.06),
		transparent 40%
	);
	z-index: 3;
}

.card::after {  
	background: radial-gradient(
		600px circle at var(--mouse-x) var(--mouse-y), 
		rgba(123, 104, 238, 0.6),
		transparent 40%
	);
	z-index: 1;
	box-sizing: border-box;
	
}

.card:not(.active) {
    transform: scale(1);
}

.card:not(.active) img {
    width: 100%;
	height: 100%;
	object-fit: contain;
	object-position: center center;
}

.card.active {
    transform: scale(1.01) translate(-50%, -50%);
	width: 95vw !important; 
    max-width: none !important;
    height: 95vh !important; 
    z-index: 4;
    position: fixed;
	display: flex;
	align-items: center;
	justify-content: center;
	top: 50%;
    left: 50%;
    margin: 0;
	padding: 10px;
    border-radius: 15px;
}


.card.active::before,
.card.active::after {
	opacity: 0;
}


.card.active .card-content {
  padding: 20px; 
}

.card.active .card-image img {
	width: 100%;
	height: 100%;
	object-fit: contain;
	object-position: center center;
}

.card > .card-content {
	background-color: var(--card-color);
	border-radius: inherit;
	display: flex;
	flex-direction: column;
	flex-grow: 1;
	inset: 1px;
	padding: 10px;
	position: absolute;
	z-index: 5;
}

.card-image {
	align-items: center;
	display: flex;
	height: 100vh;
	margin: 10px;
	justify-content: center;
	object-fit: contain;
	overflow: hidden;
}

.card-info-wrapper {
    position: absolute;
    bottom: 10px;
    left: 10px;
    padding: 10px;
    z-index: 6;
}

.card-info {
    display: flex;
    flex-direction: column;
    gap: 5px;
	z-index: 6;
}

.card-info-title > h3,
.card-info-title > h4 {
    margin: 0;
}

.card-video {
    width: 95%;
    height: auto;
    z-index: 7;
	object-fit: cover;
    position: relative; 
    border-radius: 15px; 
    overflow: hidden;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

.card.active .card-video video {
	width: 100%;
	height: 100%;
	object-fit: contain;
	object-position: center center;
}

canvas {
	max-width: 100%;
	max-height: 100%;
	display: flex;
	object-fit: contain;
	background-color: transparent;
  }
  
  .canvas-container {
	background-color: transparent;
	z-index: 2;
	width: 100%;
	height: 90vh;
	display: flex;
	justify-content: center;
	align-items: center;
  }
/* ... */

